<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.EditCollectionFragment">

    <TextView
        android:id="@+id/choose_cards_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_cards_you_have"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/app_margin"
        android:layout_marginTop="@dimen/app_margin"/>

    <CheckBox
        android:id="@+id/choose_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/choose_cards_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:buttonTint="@color/black"
        android:text="@string/text_choose_all"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginStart="@dimen/app_margin"
        android:layout_marginTop="@dimen/app_margin"
        android:padding="@dimen/app_small_padding"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_edit_collection"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/choose_all"
        app:layout_constraintBottom_toTopOf="@+id/button_save"
        android:layout_marginBottom="@dimen/app_margin"
        android:layout_marginTop="@dimen/app_margin"
        tools:listitem="@layout/card_item"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="3"/>

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorPrimary"
        android:text="@string/save_button_text"
        android:padding="@dimen/app_small_padding"
        android:layout_marginBottom="@dimen/app_small_margin"/>

</androidx.constraintlayout.widget.ConstraintLayout>